Added test comment

--- a/force-app/main/default/classes/Sample_Test.cls
+++ b/force-app/main/default/classes/Sample_Test.cls
@@ -2,6 +2,7 @@
 public with sharing class Sample_Test {
     @IsTest
     private static void getBackwardString() {
+        // Test comment
         String revStr = Sample.getBackwardString('abc');
         System.assertEquals('cba', revStr);
     }
