--- a/force-app/main/default/classes/Sample_Test.cls
+++ b/force-app/main/default/classes/Sample_Test.cls
@@ -2,8 +2,8 @@
 public with sharing class Sample_Test {
     @IsTest
     private static void getBackwardString() {
-        // Test comment modified
+        // Test comment modified more
         String revStr = Sample.getBackwardString('abc');
-        System.assertEquals('cba', revStr);
+        System.assertEquals('cba', revStr, 'Worked');
     }
 }
