--- a/force-app/main/default/classes/Sample_Test.cls
+++ b/force-app/main/default/classes/Sample_Test.cls
@@ -2,7 +2,7 @@
 public with sharing class Sample_Test {
     @IsTest
     private static void getBackwardString() {
-        // Test comment modified more and more
+        // Test asdf
         String revStr = Sample.getBackwardString('abc');
         System.assertEquals('cba', revStr, 'Worked');
     }
