--- a/force-app/main/default/classes/Sample.cls
+++ b/force-app/main/default/classes/Sample.cls
@@ -1,6 +1,5 @@
 public with sharing class Sample {
     public static string getBackwardString(String str) {
-        String reverseStr = str.reverse();
-        return reverseStr;
+        return 'Hello';
     }
 }
