--- a/force-app/main/default/classes/Sample.cls
+++ b/force-app/main/default/classes/Sample.cls
@@ -1,5 +1,6 @@
 public with sharing class Sample {
     public static string getBackwardString(String str) {
-        return 'Hello';
+        String myStr = 'Hello';
+        return myStr;
     }
 }
