--- a/force-app/main/default/classes/Sample.cls
+++ b/force-app/main/default/classes/Sample.cls
@@ -1,6 +1,10 @@
 public with sharing class Sample {
     public static string getBackwardString(String str) {
-        String myStr = 'Hello';
+        String myStr = 'asdf';
+
+        if(str == 'abc') {
+            myStr = 'Hello';
+        }
         return myStr;
     }
 }
