--- a/force-app/main/default/classes/AddRelatedRecord_Test.cls
+++ b/force-app/main/default/classes/AddRelatedRecord_Test.cls
@@ -10,5 +10,6 @@ public class AddRelatedRecord_Test {
         List<Opportunity> newOpps = [SELECT Id FROM Opportunity];
 
         System.assertEquals(newOpps.size(), 1, 'New Opp was created for the new lead');
+        //Some comment
     }
 }
